--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 spring.application.name=CadastroDeNinjas
 
-
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
-
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -14,3 +12,8 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Configurar o flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migrations
+spring.flyway.baseline-on-migrate=true
